--- a/src/main/resources/assets/rsring/lang/zh_cn.lang
+++ b/src/main/resources/assets/rsring/lang/zh_cn.lang
@@ -1,6 +1,7 @@
 #PARSE_ESCAPES
 #items\
 item.rsring.chestring.name=箱子戒指
+item.rsring.item_absorb_ring.name=物品吸收戒指
 item.rsring.experience_tank.name=经验储罐
 item.rsring.experience_pump_controller.name=经验泵控制器
 key.rsring.toggle.desc=切换戒指功能
