--- a/src/main/resources/assets/rsring/lang/zh_cn.lang
+++ b/src/main/resources/assets/rsring/lang/zh_cn.lang
@@ -1,7 +1,7 @@
 #PARSE_ESCAPES
 #items
 item.rsring.item_absorb_ring.name=物品吸收戒指
-item.rsring.experience_tank.name=经验储罐
+item.rsring.experience_pump.name=经验泵
 item.rsring.experience_pump_controller.name=经验泵控制器
 item.rsring.experience_tank_100.name=经验储罐 - 100级
 item.rsring.experience_tank_500.name=经验储罐 - 500级
