--- a/src/main/resources/assets/rsring/lang/zh_cn.lang
+++ b/src/main/resources/assets/rsring/lang/zh_cn.lang
@@ -42,3 +42,51 @@ rsring.config.max energy capacity.tooltip=戒指的最大能量容量（FE）
 
 rsring.config.use blacklist mode by default=默认使用黑名单模式
 rsring.config.use blacklist mode by default.tooltip=是否默认启用黑名单模式（true=黑名单，false=白名单）
+
+# 新配置项
+rsring.config.absorption interval=吸收间隔
+rsring.config.absorption interval.tooltip=控制每多少tick吸收一次物品（1秒=20tick）
+rsring.config.initial energy=初始能量
+rsring.config.initial energy.tooltip=新戒指的初始能量（FE）
+
+rsring.config.energy cost multiplier=能量消耗倍率
+rsring.config.energy cost multiplier.tooltip=物品能量消耗的倍率
+
+# 经验储罐配置
+config.rsring.experienceTank=经验储罐设置
+config.rsring.experienceTank.enabled=启用
+config.rsring.experienceTank.xpExtractionRate=经验抽取速率
+config.rsring.experienceTank.xpExtractionRange=经验抽取范围
+config.rsring.experienceTank.extractXpBottles=抽取经验瓶
+config.rsring.experienceTank.mendingOn=启用修补
+config.rsring.experienceTank.mendPlayerItems=修补玩家物品
+config.rsring.experienceTank.enableOverflowBottles=启用溢出经验瓶
+config.rsring.experienceTank.enableAutoPumping=启用自动泵送
+config.rsring.experienceTank.pumpingInterval=泵送间隔
+config.rsring.experienceTank.mendingInterval=修补间隔
+config.rsring.experienceTank.extractionInterval=抽取间隔
+config.rsring.experienceTank.defaultPumpMode=默认泵送模式
+config.rsring.experienceTank.defaultRetainLevel=默认保留等级
+config.rsring.experienceTank.defaultMendingMode=默认修补模式
+config.rsring.experienceTank.maxTankLevelLimit=最大储罐等级限制
+config.rsring.experienceTank.enableSpecialTanks=启用特殊储罐
+config.rsring.experienceTank.xpToBottleEfficiency=经验瓶转换效率
+config.rsring.experienceTank.xpMendingEfficiency=经验修补效率
+
+# 经验泵控制器配置
+config.rsring.controller=经验泵控制器设置
+config.rsring.controller.controllerRange=控制器范围
+
+# 通用配置
+config.rsring.general=通用设置
+config.rsring.general.enableBaublesIntegration=启用Baubles集成
+config.rsring.general.enableSoundEffects=启用声音效果
+config.rsring.general.enableParticleEffects=启用粒子效果
+config.rsring.general.debugMode=调试模式
+config.rsring.general.autoSaveInterval=自动保存间隔
+
+# 网络配置
+config.rsring.network=网络设置
+config.rsring.network.packetSendFrequency=数据包发送频率
+config.rsring.network.packetSizeLimit=数据包大小限制
+config.rsring.network.enableNetworkCompression=启用网络压缩
