--- a/src/main/resources/assets/rsring/lang/en_us.lang
+++ b/src/main/resources/assets/rsring/lang/en_us.lang
@@ -1,50 +1,53 @@
 #PARSE_ESCAPES
 item.rsring.item_absorb_ring.name=Item Absorb Ring
+item.rsring.experience_pump.name=Experience Pump
 item.rsring.experience_tank.name=Experience Tank
+item.rsring.experience_tank_100.name=Experience Tank - 100 Levels
+item.rsring.experience_tank_500.name=Experience Tank - 500 Levels
+item.rsring.experience_tank_1000.name=Experience Tank - 1000 Levels
+item.rsring.experience_tank_2000.name=Experience Tank - 2000 Levels
 item.rsring.experience_pump_controller.name=Experience Pump Controller
 key.rsring.toggle.desc=Toggle Ring
 key.categories.rsring=Rings
 message.rsring.ring_not_found=Ring not found
 
 # Configuration
-config.rsring.absorbRing=Absorb Ring Settings
-config.rsring.absorbRing.defaultBlacklistItems=Default Blacklist Items
-config.rsring.absorbRing.defaultWhitelistItems=Default Whitelist Items
-config.rsring.absorbRing.useBlacklistModeByDefault=Use Blacklist Mode By Default
-config.rsring.absorbRing.absorptionRange=Absorption Range
-config.rsring.absorbRing.energyCostPerItem=Energy Cost Per Item
-config.rsring.absorbRing.maxEnergyCapacity=Max Energy Capacity
-config.rsring.absorbRing.allowCustomFilters=Allow Custom Filters
-config.rsring.absorbRing.absorptionInterval=Absorption Interval
-
-
-config.rsring.absorbRing.initialEnergy=Initial Energy
-config.rsring.absorbRing.energyCostMultiplier=Energy Cost Multiplier
+config.rsring.ring=Absorb Ring Settings
+config.rsring.ring.defaultBlacklistItems=Default Blacklist Items
+config.rsring.ring.defaultWhitelistItems=Default Whitelist Items
+config.rsring.ring.useBlacklistModeByDefault=Use Blacklist Mode By Default
+config.rsring.ring.absorptionRange=Absorption Range
+config.rsring.ring.energyCostPerItem=Energy Cost Per Item
+config.rsring.ring.maxEnergyCapacity=Max Energy Capacity
+config.rsring.ring.allowCustomFilters=Allow Custom Filters
+config.rsring.ring.absorptionInterval=Absorption Interval
+config.rsring.ring.initialEnergy=Initial Energy
+config.rsring.ring.energyCostMultiplier=Energy Cost Multiplier
 
 # Experience Tank Configuration
-config.rsring.experienceTank=Experience Tank Settings
-config.rsring.experienceTank.enabled=Enabled
-config.rsring.experienceTank.xpExtractionRate=XP Extraction Rate
-config.rsring.experienceTank.xpExtractionRange=XP Extraction Range
-config.rsring.experienceTank.extractXpBottles=Extract XP Bottles
-config.rsring.experienceTank.mendingOn=Mending Enabled
-config.rsring.experienceTank.mendPlayerItems=Mend Player Items
-config.rsring.experienceTank.enableOverflowBottles=Enable Overflow Bottles
-config.rsring.experienceTank.enableAutoPumping=Enable Auto Pumping
-config.rsring.experienceTank.pumpingInterval=Pumping Interval
-config.rsring.experienceTank.mendingInterval=Mending Interval
-config.rsring.experienceTank.extractionInterval=Extraction Interval
-config.rsring.experienceTank.defaultPumpMode=Default Pump Mode
-config.rsring.experienceTank.defaultRetainLevel=Default Retain Level
-config.rsring.experienceTank.defaultMendingMode=Default Mending Mode
-config.rsring.experienceTank.maxTankLevelLimit=Max Tank Level Limit
-config.rsring.experienceTank.enableSpecialTanks=Enable Special Tanks
-config.rsring.experienceTank.xpToBottleEfficiency=XP to Bottle Efficiency
-config.rsring.experienceTank.xpMendingEfficiency=XP Mending Efficiency
+config.rsring.tank=Experience Tank Settings
+config.rsring.tank.enabled=Enabled
+config.rsring.tank.xpExtractionRate=XP Extraction Rate
+config.rsring.tank.xpExtractionRange=XP Extraction Range
+config.rsring.tank.extractXpBottles=Extract XP Bottles
+config.rsring.tank.mendingOn=Mending Enabled
+config.rsring.tank.mendPlayerItems=Mend Player Items
+config.rsring.tank.enableOverflowBottles=Enable Overflow Bottles
+config.rsring.tank.enableAutoPumping=Enable Auto Pumping
+config.rsring.tank.pumpingInterval=Pumping Interval
+config.rsring.tank.mendingInterval=Mending Interval
+config.rsring.tank.extractionInterval=Extraction Interval
+config.rsring.tank.defaultPumpMode=Default Pump Mode
+config.rsring.tank.defaultRetainLevel=Default Retain Level
+config.rsring.tank.defaultMendingMode=Default Mending Mode
+config.rsring.tank.maxTankLevelLimit=Max Tank Level Limit
+config.rsring.tank.enableSpecialTanks=Enable Special Tanks
+config.rsring.tank.xpToBottleEfficiency=XP to Bottle Efficiency
+config.rsring.tank.xpMendingEfficiency=XP Mending Efficiency
 
 # Pump Controller Configuration
 config.rsring.controller=Pump Controller Settings
-config.rsring.controller.controllerRange=Controller Range
+config.rsring.controller.maxManagedTanks=Maximum Managed Tanks
 
 # General Configuration
 config.rsring.general=General Settings
