Add manual energy generation feature
- Only main hand triggers energy generation
- Sneak + right-click air to generate energy
- Does not consume player experience (free energy)
- Does not affect binding/opening GUI functionality
- Uses manualChargeAmount config value (default 1000 FE)

--- a/src/main/resources/assets/rsring/lang/en_us.lang
+++ b/src/main/resources/assets/rsring/lang/en_us.lang
@@ -24,6 +24,7 @@ config.rsring.ring.allowCustomFilters=Allow Custom Filters
 config.rsring.ring.absorptionInterval=Absorption Interval
 config.rsring.ring.initialEnergy=Initial Energy
 config.rsring.ring.energyCostMultiplier=Energy Cost Multiplier
+config.rsring.ring.manualChargeAmount=Manual Charge Amount
 
 # Experience Tank Configuration
 config.rsring.tank=Experience Tank Settings
